[package]
name = "earmms_keyderiv"
version = "0.1.0"
authors = [
    "People Against Prisons Aotearoa <webmaster@papa.org.nz>"
]

[dependencies]
env_logger = "0.4.3"
hyper = "0.10.11"
iron = "0.5.1"
log = "0.3.8"
mount = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
argon2rs = "0.2.5"

