[metadata]
name = earmms_keyderiv
version = 0.1.0dev1
author = People Against Prisons Aotearoa
author-email = webmaster@noprideinprisons.org.nz
summary = Key derivation microservice for EARMMS
home-page = https://github.com/peopleagainstprisons/earmms_keyderiv/
license = MIT

[files]
packages = earmms_keyderiv
